Changed file names in static to kebab case

--- a/static/alert-details.html
+++ b/static/alert-details.html
@@ -108,9 +108,9 @@
 
     <script src="./js/navbar.js?cb=1_1_10"></script>
     <script src="./js/common.js?cb=1_1_10"></script>
-    <script src="./js/eventHandlers.js?cb=1_1_10"></script>
-    <script src="./js/datePicker.js?cb=1_1_10"></script>
-    <script src="./js/pointClickSearch.js?cb=1_1_10"></script>
+    <script src="./js/event-handlers.js?cb=1_1_10"></script>
+    <script src="./js/date-picker.js?cb=1_1_10"></script>
+    <script src="./js/point-click-search.js?cb=1_1_10"></script>
     <script src="./js/alert.js?cb=1_1_10"></script>
 </body>
 
