--- a/static/feedback.html
+++ b/static/feedback.html
@@ -18,7 +18,7 @@
             <div class="menu nav-cstats" title="Cluster Statistics"><a href="cluster-stats.html"><span
                         class="icon-cstats"></span></a>
             </div>
-            <div class="menu nav-usq" title="Saved Queries"><a href="savedqueries.html"> <span
+            <div class="menu nav-usq" title="Saved Queries"><a href="saved-queries.html"> <span
                         class="icon-usq"></span></a></div>
             <div>&nbsp;</div>
             <div class="menu nav-feedback active" title="Feedback"><a href="#"><span class="icon-feedback"></span>
