--- a/static/metrics.html
+++ b/static/metrics.html
@@ -139,7 +139,7 @@
 
     <script src="./js/common.js?cb=1_1_10"></script>
     <script src="./js/navbar.js?cb=1_1_10"></script>
-    <script src="./js/datePicker.js?cb=1_1_10"></script>
+    <script src="./js/date-picker.js?cb=1_1_10"></script>
     <script src="./js/lib/chart.umd.min.js"></script>
     <script src="./js/search.js?cb=1_1_10"></script>
     <script src="./js/metrics.js?cb=1_1_10"></script>
