--- a/static/minion-searches.html
+++ b/static/minion-searches.html
@@ -82,7 +82,7 @@
 
     <script src="./js/common.js?cb=1_1_10"></script>
     <script src="./js/navbar.js?cb=1_1_10"></script>
-    <script src="./js/eventHandlers.js?cb=1_1_10"></script>
+    <script src="./js/event-handlers.js?cb=1_1_10"></script>
     <script src="./js/minion-searches.js?cb=1_1_10"></script>
 
 </body>
