--- a/static/live-tail.html
+++ b/static/live-tail.html
@@ -174,16 +174,16 @@
 
     <script src="./js/navbar.js?cb=1_1_10"></script>
     <script src="./js/common.js?cb=1_1_10"></script>
-    <script src="./js/eventHandlers.js?cb=1_1_10"></script>
-    <script src="./js/availableFields.js?cb=1_1_10"></script>
-    <script src="./js/logResultsGrid.js?cb=1_1_10"></script>
-    <script src="./js/agGridSegstats.js?cb=1_1_10"></script>
-    <script src="./js/datePicker.js?cb=1_1_10"></script>
+    <script src="./js/event-handlers.js?cb=1_1_10"></script>
+    <script src="./js/available-fields.js?cb=1_1_10"></script>
+    <script src="./js/log-results-grid.js?cb=1_1_10"></script>
+    <script src="./js/ag-grid-seg-stats.js?cb=1_1_10"></script>
+    <script src="./js/date-picker.js?cb=1_1_10"></script>
     <script src="./js/search.js?cb=1_1_10"></script>
-    <script src="./js/savedQuery.js?cb=1_1_10"></script>
+    <script src="./js/saved-query.js?cb=1_1_10"></script>
     <script src="./js/index.js?cb=1_1_10"></script>
-    <script src="./js/pointClickSearch.js?cb=1_1_10"></script>
-    <script src="./js/logSearch.js?cb=1_1_10"></script>
+    <script src="./js/point-click-search.js?cb=1_1_10"></script>
+    <script src="./js/log-search.js?cb=1_1_10"></script>
 </body>
 
 </html>
