add dockerfile and related changes

--- a/static/saved-queries.html
+++ b/static/saved-queries.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5SBJC04YFB"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+    
+        gtag('config', 'G-5SBJC04YFB');
+    </script>
+    
 <head>
     <title>Saved Queries</title>
 
