resolved merge conflicts

--- a/static/cluster-stats.html
+++ b/static/cluster-stats.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5SBJC04YFB"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-5SBJC04YFB');
+</script>
+
 <head>
     <title>Cluster Stats</title>
 
@@ -42,8 +51,8 @@
                         <h1 class="myOrg-heading">My Org</h1>
                         <div class="section-buttons">
                             <div class="section-button active"><a href="./cluster-stats.html">Cluster Stats</a></div>
-                            <div class="section-button"><a href="./orgSettings.html">Settings</a></div>
-                            <div class="section-button"><a href="./testData.html">Test Data</a></div>
+                            <div class="section-button"><a href="./org-settings.html">Settings</a></div>
+                            <div class="section-button"><a href="./test-data.html">Test Data</a></div>
                         </div>
                     </div>
                     <div>
@@ -135,14 +144,14 @@
 
     <script src="./js/navbar.js?cb=1_1_10"></script>
     <script src="./js/cluster-stats.js"></script>
-    <script src="./js/eventHandlers.js?cb=1_1_10"></script>
+    <script src="./js/event-handlers.js?cb=1_1_10"></script>
     <script src="./js/common.js?cb=1_1_10"></script>
-    <script src="./js/availableFields.js?cb=1_1_10"></script>
-    <script src="./js/datePicker.js?cb=1_1_10"></script>
+    <script src="./js/available-fields.js?cb=1_1_10"></script>
+    <script src="./js/date-picker.js?cb=1_1_10"></script>
     <script src="./js/search.js?cb=1_1_10"></script>
-    <script src="./js/savedQuery.js?cb=1_1_10"></script>
+    <script src="./js/saved-query.js?cb=1_1_10"></script>
     <script src="./js/index.js?cb=1_1_10"></script>
-    <script src="./js/pointClickSearch.js?cb=1_1_10"></script>
+    <script src="./js/point-click-search.js?cb=1_1_10"></script>
     <script src="./js/lib/chart.umd.min.js"></script>
 </body>
 
