--- a/static/feedback.html
+++ b/static/feedback.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5SBJC04YFB"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+    
+        gtag('config', 'G-5SBJC04YFB');
+    </script>
+    
 <head>
     <meta charset="UTF-8">
     <title>SigLens</title>
@@ -18,7 +26,7 @@
             <div class="menu nav-cstats" title="Cluster Statistics"><a href="cluster-stats.html"><span
                         class="icon-cstats"></span></a>
             </div>
-            <div class="menu nav-usq" title="Saved Queries"><a href="savedqueries.html"> <span
+            <div class="menu nav-usq" title="Saved Queries"><a href="saved-queries.html"> <span
                         class="icon-usq"></span></a></div>
             <div>&nbsp;</div>
             <div class="menu nav-feedback active" title="Feedback"><a href="#"><span class="icon-feedback"></span>
