--- a/static/metrics.html
+++ b/static/metrics.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5SBJC04YFB"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-5SBJC04YFB');
+</script>
+
 <head>
     <meta charset="UTF-8">
     <title>SigLens</title>
@@ -139,7 +148,7 @@
 
     <script src="./js/common.js?cb=1_1_10"></script>
     <script src="./js/navbar.js?cb=1_1_10"></script>
-    <script src="./js/datePicker.js?cb=1_1_10"></script>
+    <script src="./js/date-picker.js?cb=1_1_10"></script>
     <script src="./js/lib/chart.umd.min.js"></script>
     <script src="./js/search.js?cb=1_1_10"></script>
     <script src="./js/metrics.js?cb=1_1_10"></script>
