--- a/static/all-alerts.html
+++ b/static/all-alerts.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5SBJC04YFB"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-5SBJC04YFB');
+</script>
+
 <head>
     <meta charset="UTF-8">
     <title>SigLens</title>
@@ -76,9 +85,9 @@
 
     <script src="./js/navbar.js?cb=1_1_10"></script>
     <script src="./js/common.js?cb=1_1_10"></script>
-    <script src="./js/eventHandlers.js?cb=1_1_10"></script>
-    <script src="./js/datePicker.js?cb=1_1_10"></script>
-    <script src="./js/pointClickSearch.js?cb=1_1_10"></script>
+    <script src="./js/event-handlers.js?cb=1_1_10"></script>
+    <script src="./js/date-picker.js?cb=1_1_10"></script>
+    <script src="./js/point-click-search.js?cb=1_1_10"></script>
     <script src="./js/all-alerts.js?cb=1_1_10"></script>
 </body>
 
