--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5SBJC04YFB"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-5SBJC04YFB');
+</script>
+
 <head>
     <meta charset="UTF-8" />
     <title>SigLens</title>
@@ -613,18 +622,18 @@
     <script src="./js/lib/chart.umd.min.js"></script>
     <script src="./js/common.js?cb=1_1_10"></script>
     <script src="./js/navbar.js?cb=1_1_10"></script>
-    <script src="./js/eventHandlers.js?cb=1_1_10"></script>
-    <script src="./js/availableFields.js?cb=1_1_10"></script>
-    <script src="./js/logResultsGrid.js?cb=1_1_10"></script>
-    <script src="./js/agGridSegstats.js?cb=1_1_10"></script>
-    <script src="./js/datePicker.js?cb=1_1_10"></script>
-    <script src="./js/savedQuery.js?cb=1_1_10"></script>
+    <script src="./js/event-handlers.js?cb=1_1_10"></script>
+    <script src="./js/available-fields.js?cb=1_1_10"></script>
+    <script src="./js/log-results-grid.js?cb=1_1_10"></script>
+    <script src="./js/ag-grid-seg-stats.js?cb=1_1_10"></script>
+    <script src="./js/date-picker.js?cb=1_1_10"></script>
+    <script src="./js/saved-query.js?cb=1_1_10"></script>
     <script src="./js/index.js?cb=1_1_10"></script>
-    <script src="./js/pointClickSearch.js?cb=1_1_10"></script>
-    <script src="./js/dashboardCharts.js?cb=1_1_10"></script>
+    <script src="./js/point-click-search.js?cb=1_1_10"></script>
+    <script src="./js/dashboard-charts.js?cb=1_1_10"></script>
     <script src="./js/dashboard.js?cb=1_1_10"></script>
-    <script src="./js/editPanelScreen.js?cb=1_1_10"></script>
-    <script src="./js/dashboardLogsResultsGrid.js?cb=1_1_10"></script>
+    <script src="./js/edit-panel-screen.js?cb=1_1_10"></script>
+    <script src="./js/dashboard-logs-results-grid.js?cb=1_1_10"></script>
 </body>
 
 </html>
