--- a/static/minion-searches.html
+++ b/static/minion-searches.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5SBJC04YFB"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+    
+        gtag('config', 'G-5SBJC04YFB');
+    </script>
+    
 <head>
     <meta charset="UTF-8">
     <title>SigLens</title>
@@ -82,7 +90,7 @@
 
     <script src="./js/common.js?cb=1_1_10"></script>
     <script src="./js/navbar.js?cb=1_1_10"></script>
-    <script src="./js/eventHandlers.js?cb=1_1_10"></script>
+    <script src="./js/event-handlers.js?cb=1_1_10"></script>
     <script src="./js/minion-searches.js?cb=1_1_10"></script>
 
 </body>
