--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -104,14 +104,14 @@
                         </div>
                     </div>
                     <button class="btn dropdown-dash" id="save-db-btn" title="Save dashboard">
-                        <span><img src="./assets/save-btn.svg" alt="" /></span>
+                        <!-- <span><img src="./assets/save-btn.svg" alt="" /></span> -->
                     </button>
                     <button class="btn settings-btn" title="Dashboard settings">
-                        <span><img src="./assets/setting-icon.svg" alt="" /></span>
+                        <!-- <span><img src="./assets/setting-icon.svg" alt="" /></span> -->
                     </button>
                     <div class="refresh-container">
                         <button class="btn refresh-btn" title="Refresh dashboard">
-                            <span><img src="./assets/refreshy-icon.svg" alt="" /></span>
+                            <!-- <span><img src="./assets/refreshy-icon.svg" alt="" /></span> -->
                         </button>
                         <div class="dropdown">
                             <button class="btn dropdown-toggle" type="button" id="refresh-picker-btn"
@@ -345,10 +345,10 @@
         <div class="panelEditorRight">
             <div class="panEdit-navBtns">
                 <button class="btn settings-btn panEdit-btn" title="Open dashboard settings">
-                    <span><img src="./assets/setting-icon.svg" alt=""></span>
+                    <!-- <span><img src="./assets/setting-icon.svg" alt=""></span> -->
                 </button>
                 <button class="btn refresh-btn panEdit-btn" title="Refresh dashboard">
-                    <span><img src="./assets/refreshy-icon.svg" alt="" /></span>
+                    <!-- <span><img src="./assets/refreshy-icon.svg" alt="" /></span> -->
                 </button>
                 <button class="panEdit-btn panEdit-discard" id="discard-btn" title="Undo all changes">Discard</button>
                 <button class="panEdit-btn panEdit-save" id="save-btn"
