UI : All Alert and Alert Rule Screen

--- a/static/all-alerts.html
+++ b/static/all-alerts.html
@@ -64,7 +64,7 @@
                 </button>
             </div>
             <div id="alert-grid-container">
-                <div id="ag-grid" class="ag-theme-mycustomtheme all-alerts-grid">
+                <div id="ag-grid" class="ag-theme-mycustomtheme">
                 </div>
             </div>
             <div class="popupOverlay">
