UI : Contact Screen

--- a/static/contacts.html
+++ b/static/contacts.html
@@ -67,7 +67,7 @@
             </div>
 
             <div id="alert-grid-container">
-                <div id="queries-grid" class="ag-theme-mycustomtheme all-contacts-grid">
+                <div id="ag-grid" class="ag-theme-mycustomtheme all-contacts-grid">
                 </div>
             </div>
             <div class="popupOverlay">
