--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="btn-container">
                     <div class="dropdown">
-                        <button class="btn dropdown-toggle btn-top" type="button" id="date-picker-btn" data-toggle="dropdown"
+                        <button class="btn dropdown-toggle btn-top index-btn-show" type="button" id="date-picker-btn" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false" data-bs-toggle="dropdown" title="Pick the time window">
                             <span>Time Picker</span>
                             <img class="dropdown-arrow orange" src="assets/arrow-btn.svg">
@@ -162,9 +162,9 @@
             <div class="panEdit-navBar">
                 <div>
                     <span class="panEdit-goToDB" title="Go back">&#8592</span>
-                    <span class="panEdit-dbName">DBName</span>
-                    <span> / </span>
-                    <span class="panelTitle">Panel 1</span>
+                    <span class="panEdit-dbName over-title">DBName</span>
+                    <span class="over-title"> / </span>
+                    <span class="panelTitle over-title">Panel 1</span>
                 </div>
 
                 <div class="navbar-options">
@@ -364,19 +364,19 @@
                     <div class="caret"></div>
                 </div>
                 <ul class="editPanelMenu editPanelMenu-chart">
-                    <div class="editPanelMenu-options" id="chart-type-options" data-index="0">
+                    <div class="editPanelMenu-options chart-options" id="chart-type-options" data-index="0">
                         <img src="./assets/line-chart.svg" alt="" class="chart-display"/>
                         <li>Line Chart</li>
                     </div>
-                    <div class="editPanelMenu-options" id="chart-type-options" data-index="1">
+                    <div class="editPanelMenu-options chart-options" id="chart-type-options" data-index="1">
                         <img src="./assets/bar-chart.svg" alt="" class="chart-display"/>
                         <li>Bar Chart</li>
                     </div>
-                    <div class="editPanelMenu-options" id="chart-type-options" data-index="2">
+                    <div class="editPanelMenu-options chart-options" id="chart-type-options" data-index="2">
                         <img src="./assets/pie-chart.svg" alt="" class="chart-display"/>
                         <li>Pie Chart</li>
                     </div>
-                    <div class="editPanelMenu-options" id="chart-type-options" data-index="3">
+                    <div class="editPanelMenu-options chart-options" id="chart-type-options" data-index="3">
                         <img src="./assets/data-table.svg" alt="" class="chart-display"/>
                         <li>Data Table</li>
                     </div>
