Custom Labels Position

--- a/static/alert.html
+++ b/static/alert.html
@@ -212,16 +212,18 @@
                                     required></textarea>
                             </div>
                         </div>
-                        <label for="custom-label">Custom Label</label>
-                        <div class="d-flex align-items-end mb-0">
-                            <div class="label-main-container mb-0">
-                                <div class="label-container d-flex align-items-center">
-                                    <input type="text" id="label-key" class="form-control" placeholder="Label name"
-                                        value="alerting"><span class="label-equal"> = </span> <input type="text"
-                                        id="label-value" class="form-control" placeholder="Value" value="true">
+                        <div class="label-subsection">
+                            <label for="custom-label">Custom Label</label>
+                            <div class="d-flex align-items-end mb-0">
+                                <div class="label-main-container mb-0">
+                                    <div class="label-container d-flex align-items-center">
+                                        <input type="text" id="label-key" class="form-control" placeholder="Label name"
+                                            value="alerting"><span class="label-equal"> = </span> <input type="text"
+                                            id="label-value" class="form-control" placeholder="Value" value="true">
+                                    </div>
                                 </div>
+                                <button class="add-label-container btn" type="button">Add Label</button>
                             </div>
-                            <button class="add-label-container btn" type="button">Add Label</button>
                         </div>
                     </div>
                 </form>
