--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -12,7 +12,10 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>SigLens</title>
+    <title>
+        <h1>SG SCLAR Change By Me</h1>
+    </title>
+    
 
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png" />
