--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -13,7 +13,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>
-        <h1>SG SCLAR Change By Me</h1>
+        <h3>siglens</h3>
     </title>
     
 
