iframe tag add attribute

--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -12,9 +12,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>
-        <h3>siglens</h3>
-    </title>
+    <title>siglens</title>
     
 
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
