--- a/static/feedback.html
+++ b/static/feedback.html
@@ -21,7 +21,7 @@
 
         <div id="app-side-nav">
             <div class="menu logo" title=""><a href="./index.html"><img class="sslogo"
-                        src="assets/SigLens-logo.svg"></a></div>
+                        src="assets/SigLens-logo.svg"/></a></div>
             <div class="menu nav-search" title="Search"><a href="index.html"><span class="icon-search"></span></a></div>
             <div class="menu nav-cstats" title="Cluster Statistics"><a href="cluster-stats.html"><span
                         class="icon-cstats"></span></a>
@@ -37,7 +37,7 @@
 
         <iframe
             src="https://docs.google.com/forms/d/e/1FAIpQLSfs_mxeX4LKbjAdX22cOknFaoi2TJcoOGD3OKj2RmZl7evD6A/viewform?embedded=true"
-            width="640" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+            width="640" height="700" frameborder="0" marginheight="0" marginwidth="0" allowfullscreen="" loading="lazy"referrerpolicy="no-referrer-when-downgrade">Loading…</iframe>
 
         <div id="app-footer">
             2023 &copy; SigLens
